Make graph to work with buttons